# shelf

./: .dev.vars.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
deploy/: README.md  hevsearch-engine.yaml  index.yaml  local-compose.yaml  pipeline.yaml  vectorstore.yaml  warehouse.yaml
docs/: fused-leg-attribution.md
firn_demo/: Dockerfile  Dockerfile.dockerignore  README.md  __init__.py  __main__.py  app.py  client.py  config.py  index.py  schema.py
firn_demo/deploy/: 00-namespace-sa.yaml  10-firn-engine.yaml  20-demo.yaml  30-indexer-job.yaml  40-ingress.yaml  README.md  deploy.sh  secret.example.yaml
firn_demo/static/: index.html  queries.json
indexer/: __init__.py  __main__.py  dataset.py  index.py
scripts/: validate_cutover.py
search/: __init__.py  app.py
shelf_common/: __init__.py  config.py  embed.py  gateway.py  records.py
src/: worker.js
web/static/: index.html  queries.json
